rename client to user (back renaming)